# nodejs-server/api/openapi.yaml
@@ -1258,16 +1258,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200'
-              examples:
-                instrumentObject:
-                  $ref: '#/components/examples/instrumentObject'
-                bondObject:
-                  $ref: '#/components/examples/bondObject'
-                fundamentalDataObject:
-                  $ref: '#/components/examples/fundamentalDataObject'
-                fundamentalObject:
-                  $ref: '#/components/examples/fundamentalObject'
+                type: array
+                items:
+                  anyOf:
+                  - $ref: '#/components/schemas/SearchInstrument'
+                  - $ref: '#/components/schemas/Bond'
+                  - $ref: '#/components/schemas/FundamentalData'
+                  - $ref: '#/components/schemas/Fundamental'
+                x-content-type: application/json
         "400":
           description: An error message indicating the caller must pass a non null
             value in the parameter.
@@ -2438,12 +2436,6 @@ components:
           - MUTUAL_FUND
           - OPTION
           - UNKNOWN
-    inline_response_200:
-      oneOf:
-      - $ref: '#/components/schemas/SearchInstrument'
-      - $ref: '#/components/schemas/Bond'
-      - $ref: '#/components/schemas/FundamentalData'
-      - $ref: '#/components/schemas/Fundamental'
     Hours_sessionHours:
       type: object
       properties:
